Grease Pencil Parenting works but hides layers above the parented one. #89366

Closed
opened 2021-06-22 17:00:53 +02:00 by Piotr Nikov · 8 comments

System Information
Operating system: MacOs 11.4
Graphics card: AMD Radeon Pro 5500M 8 GB

Blender Version
Broken: Latest 3.0
Worked: 2.83

Short description of error
Parenting GP layer to an object and moving that object, makes GP layer move but makes every GP layer above disappear...

Exact steps for others to reproduce the error
. Create GP with 2 layers (ex Wall & Character)
. Create Empty
. Draw things in both GP layers.
. Select Character Layer. Go in Relation/Parent/ Choose Empty.
. In object mode select and move Empty. Wall GP layer disappears (and whatever layer you have above Character layer).
See attached file and try moving the Empty around :)
Thanks!

Piotr
PS This would need a better title so sorry!
GP_ParentBug.blend

**System Information** Operating system: MacOs 11.4 Graphics card: AMD Radeon Pro 5500M 8 GB **Blender Version** Broken: Latest 3.0 Worked: 2.83 **Short description of error** Parenting GP layer to an object and moving that object, makes GP layer move but makes every GP layer above disappear... **Exact steps for others to reproduce the error** . Create GP with 2 layers (ex Wall & Character) . Create Empty . Draw things in both GP layers. . Select Character Layer. Go in Relation/Parent/ Choose Empty. . In object mode select and move Empty. Wall GP layer disappears (and whatever layer you have above Character layer). See attached file and try moving the Empty around :) Thanks! Piotr PS This would need a better title so sorry! [GP_ParentBug.blend](https://archive.blender.org/developer/F10188004/GP_ParentBug.blend)
Author

Added subscriber: @Pyer

Added subscriber: @Pyer

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

The problem is for any layer above parented one.

The problem is for any layer above parented one.

This issue was referenced by 1917d0345e

This issue was referenced by 1917d0345e8bde22f3aa22dc8daf95c97f59cccf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Antonio Vazquez self-assigned this 2021-06-22 19:50:17 +02:00

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

@Jeroen-Bakker This is important change for 2.93 LTS

@Jeroen-Bakker This is important change for 2.93 LTS
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89366
No description provided.