Fix T89366: GPencil hide layers above parented layer

The problem was the flag was not reset by layer in the loop.