source/blender/blenkernel/intern/gpencil.c
@@ -3009,8 +3009,9 @@ void BKE_gpencil_update_layer_transforms(const Depsgraph *depsgraph, Object *ob)
   bGPdata *gpd = (bGPdata *)ob->data;
   float cur_mat[4][4];
 
-  bool changed = false;
   LISTBASE_FOREACH (bGPDlayer *, gpl, &gpd->layers) {
+    bool changed = false;
+
     unit_m4(cur_mat);
     if (gpl->actframe != NULL) {
       if (gpl->parent != NULL) {
